chore: snapshot prior to Jira batch
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>